--- a/project_national/national_baseline_AddSharedWaterHeater.yml
+++ b/project_national/national_baseline_AddSharedWaterHeater.yml
@@ -72,6 +72,7 @@ workflow_generator:
         # - name: CapOutput_outputvar
         # - name: EirOutput_outputvar
         - name: Schedule Value
+        - name: Availability Manager Differential Thermostat Control Status
 
     reporting_measures:
       - measure_dir_name: QOIReport
