--- a/project_national/national_baseline_AddSharedWaterHeater.yml
+++ b/project_national/national_baseline_AddSharedWaterHeater.yml
@@ -57,22 +57,35 @@ workflow_generator:
       include_timeseries_weather: false
       include_timeseries_resilience: false
       output_variables:
-        - name: Water Heater NaturalGas Energy
+        # - name: Water Heater NaturalGas Energy
         - name: Boiler NaturalGas Energy
         - name: Fuel-fired Absorption HeatPump Fuel Energy
-        - name: Plant Supply Side Inlet Temperature
-        - name: Plant Supply Side Outlet Temperature
-        # - name: Water Heater Source Side Inlet Temperature
-        # - name: Water Heater Source Side Outlet Temperature
+        - name: Fuel-fired Absorption HeatPump Electricity Energy
+        # - name: Schedule Value
+        - name: Water Use Connections Hot Water Volume
+        - name: Baseboard Hot Water Energy
+        # - name: Plant Supply Side Inlet Temperature
+        # - name: Plant Supply Side Outlet Temperature
+        - name: Water Heater Source Side Inlet Temperature
+        - name: Water Heater Source Side Outlet Temperature
+        - name: Water Heater Use Side Inlet Temperature
+        - name: Water Heater Use Side Outlet Temperature
         - name: Boiler Inlet Temperature
+        - name: Boiler Outlet Temperature
         - name: Fuel-fired Absorption HeatPump Inlet Temperature
-        - name: Performance Curve Input Variable 1 Value
-        - name: Performance Curve Input Variable 2 Value
-        # - name: Site Outdoor Air Drybulb Temperature
-        # - name: CapOutput_outputvar
-        # - name: EirOutput_outputvar
-        - name: Schedule Value
-        - name: Availability Manager Differential Thermostat Control Status
+        - name: Fuel-fired Absorption HeatPump Outlet Temperature
+        # - name: Water Heater Temperature Node 1
+        # - name: Water Heater Temperature Node 6
+        # - name: Performance Curve Input Variable 1 Value
+        # - name: Performance Curve Input Variable 2 Value
+        # - name: Performance Curve Output Value
+        - name: Site Outdoor Air Drybulb Temperature
+        - name: CapCurveFuncTempAct Output
+        - name: EIRCurveFuncTempAct Output
+        - name: AuxElecEIRCurveFuncTempCurveAct Output
+        # - name: Schedule Value
+        # - name: Availability Manager Differential Thermostat Control Status
+        # - name: Availability Manager High Temperature Turn Off Control Status
 
     reporting_measures:
       - measure_dir_name: QOIReport
