--- a/project_national/national_baseline_AddSharedWaterHeater.yml
+++ b/project_national/national_baseline_AddSharedWaterHeater.yml
@@ -57,8 +57,10 @@ workflow_generator:
       include_timeseries_weather: false
       include_timeseries_resilience: false
       output_variables:
-        - name: Boiler NaturalGas Energy
-        - name: Fuel-fired Absorption HeatPump Fuel Energy
+        - name: Boiler NaturalGas Energy # 1a
+        - name: Boiler Heating Energy # 1b
+        - name: Fuel-fired Absorption HeatPump Fuel Energy # 2a
+        - name: Fuel-fired Absorption HeatPump Load Side Heat Transfer Energy # 2b
         - name: Boiler Inlet Temperature
         - name: Boiler Outlet Temperature
         - name: Fuel-fired Absorption HeatPump Inlet Temperature
@@ -72,10 +74,8 @@ workflow_generator:
         - name: gahp_1_ago_output
         - name: Site Mains Water Temperature
         # - name: Water Heater NaturalGas Energy
-        # - name: Boiler Heating Energy
         # - name: Boiler Ancillary NaturalGas Energy
         # - name: Boiler Ancillary Electricity Energy
-        # - name: Fuel-fired Absorption HeatPump Load Side Heat Transfer Energy
         # - name: Fuel-fired Absorption HeatPump Electricity Energy
         # - name: Schedule Value
         # - name: Water Use Connections Hot Water Volume
