--- a/project_CA/scenario_3.yml
+++ b/project_CA/scenario_3.yml
@@ -37,7 +37,7 @@ workflow_generator:
       - scenario_name: Bills
 
     simulation_output_report:
-      timeseries_frequency: hourly
+      timeseries_frequency: none
       include_timeseries_total_consumptions: true
       include_timeseries_fuel_consumptions: true
       include_timeseries_end_use_consumptions: true
@@ -93,7 +93,7 @@ postprocessing:
     region_name: 'us-west-2'
     s3:
       bucket: gas-hpwh
-      prefix: '2020'
+      prefix: '2026'
     athena:
       glue_service_role: service-role/AWSGlueServiceRole-default
       database_name: gashpwh
