--- a/project_CA/scenario_4.yml
+++ b/project_CA/scenario_4.yml
@@ -11,7 +11,7 @@ weather_files_url: https://data.nrel.gov/system/files/156/Buildstock_TMY3_FIPS-1
 sampler:
   type: precomputed
   args:
-    sample_file: 2029.csv
+    sample_file: 2029_2k.csv
 
 workflow_generator:
   type: residential_hpxml
@@ -37,7 +37,7 @@ workflow_generator:
       - scenario_name: Bills
 
     simulation_output_report:
-      timeseries_frequency: hourly
+      timeseries_frequency: none
       include_timeseries_total_consumptions: true
       include_timeseries_fuel_consumptions: true
       include_timeseries_end_use_consumptions: true
@@ -77,7 +77,7 @@ postprocessing:
     region_name: 'us-west-2'
     s3:
       bucket: gas-hpwh
-      prefix: '2020'
+      prefix: '2029'
     athena:
       glue_service_role: service-role/AWSGlueServiceRole-default
       database_name: gashpwh
