--- a/project_CA/scenario_4.yml
+++ b/project_CA/scenario_4.yml
@@ -11,7 +11,7 @@ weather_files_url: https://data.nrel.gov/system/files/156/Buildstock_TMY3_FIPS-1
 sampler:
   type: precomputed
   args:
-    sample_file: 2029_2k.csv
+    sample_file: 2029.csv
 
 workflow_generator:
   type: residential_hpxml
